--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat Healthy Website</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link href=<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section>
         <div class="half-width">
-            <h1><span>Skip</span> The Diet,<br>
+            <h1><span class="orange">Skip</span> The Diet,<br>
                 Just Eat Healthy<br>
                 With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
@@ -31,22 +31,45 @@
             <a class="anchor-button" href="">Contact Me</a>
         </div>
     </section>
-    <section class="experience-area">
-        <h2>My Recipies</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+    <section class="recipie">
+        <div class="recipie-header">
+            <h2>My Recipies</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div> 
+    </section>
+    <section>
+        <div class="half-width" id="full-stack">
+            <img src="images/food/food_1.jpg" alt="">
+            <h3>Recipie Title</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div>
         <div class="half-width" id="full-stack">
             <img src="images/food/Project-Cover.png" alt="">
             <h3>Recipie Title</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
         </div>
-        <div class="half-width" id="baby-web">
-            <img src="images/food/Project-Cover.png" alt="">
-            <h3>Recipie Title</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </section>
+    <section class="followers_main">
+        <div class="followers">
+            <div class="follows_1">
+                <h2>700k</h2>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="follows_1">
+                <h2>2.4m</h2>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="follows_1">
+                <h2>100k</h2>
+                <p>Dribble shots likes</p>
+            </div>
         </div>
     </section>
     <footer>
-        <p>©Get Humble</p>
+        <h2>
+            <span class="orange">Eat</span> Fresh
+        </h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
     </footer>
 </body>
 </html>
